@@ -1,10 +1,9 @@
 ﻿'------------------------------------------------------------------------------
 ' <auto-generated>
 '     This code was generated by a tool.
-'     Runtime Version:2.0.50727.4927
 '
 '     Changes to this file may cause incorrect behavior and will be lost if
-'     the code is regenerated.
+'     the code is regenerated. 
 ' </auto-generated>
 '------------------------------------------------------------------------------
 
@@ -12,42 +11,41 @@ Option Strict On
 Option Explicit On
 
 
-
 Partial Public Class Search
 
- '''<summary>
- '''cboBlogSelect control.
- '''</summary>
- '''<remarks>
- '''Auto-generated field.
- '''To modify move field declaration from designer file to code-behind file.
- '''</remarks>
- Protected WithEvents cboBlogSelect As Global.System.Web.UI.WebControls.DropDownList
+    '''<summary>
+    '''cboBlogSelect control.
+    '''</summary>
+    '''<remarks>
+    '''Auto-generated field.
+    '''To modify move field declaration from designer file to code-behind file.
+    '''</remarks>
+    Protected WithEvents cboBlogSelect As Global.System.Web.UI.WebControls.DropDownList
 
- '''<summary>
- '''txtSearch control.
- '''</summary>
- '''<remarks>
- '''Auto-generated field.
- '''To modify move field declaration from designer file to code-behind file.
- '''</remarks>
- Protected WithEvents txtSearch As Global.System.Web.UI.WebControls.TextBox
+    '''<summary>
+    '''txtSearch control.
+    '''</summary>
+    '''<remarks>
+    '''Auto-generated field.
+    '''To modify move field declaration from designer file to code-behind file.
+    '''</remarks>
+    Protected WithEvents txtSearch As Global.System.Web.UI.WebControls.TextBox
 
- '''<summary>
- '''optSearchType control.
- '''</summary>
- '''<remarks>
- '''Auto-generated field.
- '''To modify move field declaration from designer file to code-behind file.
- '''</remarks>
- Protected WithEvents optSearchType As Global.System.Web.UI.WebControls.RadioButtonList
+    '''<summary>
+    '''optSearchType control.
+    '''</summary>
+    '''<remarks>
+    '''Auto-generated field.
+    '''To modify move field declaration from designer file to code-behind file.
+    '''</remarks>
+    Protected WithEvents optSearchType As Global.System.Web.UI.WebControls.RadioButtonList
 
- '''<summary>
- '''btnSearch control.
- '''</summary>
- '''<remarks>
- '''Auto-generated field.
- '''To modify move field declaration from designer file to code-behind file.
- '''</remarks>
- Protected WithEvents btnSearch As Global.System.Web.UI.WebControls.Button
+    '''<summary>
+    '''btnSearch control.
+    '''</summary>
+    '''<remarks>
+    '''Auto-generated field.
+    '''To modify move field declaration from designer file to code-behind file.
+    '''</remarks>
+    Protected WithEvents btnSearch As Global.System.Web.UI.WebControls.Button
 End Class
